horizontal scrollbar fix

--- a/src/Components/AboutUsSection/AboutUsSection.sass
+++ b/src/Components/AboutUsSection/AboutUsSection.sass
@@ -8,6 +8,7 @@
     height: 85vh
     background-repeat: no-repeat
     background-size: cover
+    overflow: hidden
 
 .aboutUsSection__text
     text-align: center
