--- a/src/Components/Hero/Hero.sass
+++ b/src/Components/Hero/Hero.sass
@@ -1,7 +1,6 @@
 @import '../../Styles/@mixins'
 
 .hero
-    min-height: 800px
     width: 100%
     position: relative
 
@@ -28,6 +27,3 @@
     margin-top: 35px
     display: flex
     gap: 41px
-
-
-
