--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -4,13 +4,16 @@
   justify-content: center;
   flex-direction: column;
   position: relative;
+  max-height: 85vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
 
 
   .imgContainer {
-    width: 100%;
-    height: 85vh;
-    background-repeat: no-repeat;
-    background-size: cover;
+    width: 100vw;
+    max-width: 100%;
+
   }
 }
 
