--- a/src/Styles/@globals.sass
+++ b/src/Styles/@globals.sass
@@ -19,13 +19,10 @@ body
   display: flex
   justify-content: center
   min-width: 320px
-  min-height: 100vh
 
 
 .page
   display: flex
   flex-direction: column
-  min-height: 100vh
-  width: 100%
-  min-width: 99vw
+
   overflow: hidden
