--- a/src/layout/Header/Header.sass
+++ b/src/layout/Header/Header.sass
@@ -1,14 +1,18 @@
 .header
     width: 100%
     height: 100px
-    padding: 0 165px
-    display: flex
-    align-items: center
-    justify-content: space-between
     background: rgba(1, 0, 1, 0.4)
     backdrop-filter: blur(5px)
     position: absolute
     z-index: 5
+    top: 0
+    left: 0
+
+.header__container
+    margin: 0 165px
+    display: flex
+    align-items: center
+    justify-content: space-between
 
 .header__icons
     display: flex
